backend/room9-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room9-backend
spec:
  selector:
    matchLabels:
      name: room9-backend
  template:
    metadata:
      labels:
        name: room9-backend
    spec:
      containers:
      - name: room9-backend
        image: hsju0202/room9-backend:22
        ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: regcred
