backend/room9-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: room9-backend-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
      name: room9-backend
